pas de noeuds joints, mais il faut un recalibrage d'aretes