@@ -5,3 +5,8 @@
 Mon superviseur est Gena Hahn (<hahn@iro.umontreal.ca>).
 
 Alors que j'avais prévu faire un projet de recherche sur le problème de Hunter & Rabbit, je vais finalement implémenter une application pour visualiser un graphe et y jouer au problème de Cops & Robbers. Une modification pourrait alors implémenter le problème du chasseur initial.
+
+---
+
+Une fois clonné, il s'assurer d'avoir configuré un accès à la librairie JavaFX. 
+Il y a aussi besoin du module javafx.controls : sous IntelliJ, il faut l'ajouter avec ```--module-path "C:\path\to\javafx\lib" --add-modules javafx.controls,javafx.media```
